2011-06-04	Juergen Beisert <jbe@pengutronix.de>

	* various MD5 sums added to be compliant with the new PTXdist
	* Kernel 2.6.39:
		- Enable static USB mass storage and SCSI support
		- Enable VFAT support
	* Kernel 2.6.38:
		- Enable static USB mass storage and SCSI support
		- Enable VFAT support

2011-06-03	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 2.6.39: Keep in sync with stable release 2.6.39.1
	* Kernel 2.6.38: Keep in sync with stable release 2.6.38.8

2011-05-26	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 2.6.38: Fix a race in the touch driver
	* Kernel 2.6.39: Fix a race in the touch driver
	* Barebox: Add a fix for wrong NAND OOB handling
	* Kernel 2.6.38: Add a fix for wrong NAND OOB handling
	* Kernel 2.6.39: Add a fix for wrong NAND OOB handling

2011-05-22	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 2.6.38: Keep in sync with stable release 2.6.38.7

2011-05-19	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 2.6.38: Add forgotten AT24 EEPROM driver
	* Kernel 2.6.39: Add recent kernel to the platform

2011-05-09	Marek Belisko <marek.belisko@open-nandra.com>

	* Kernel 2.6.38: Fix the broken audio support in a correct manner
	          (backport from current 2.6.39/40 development)

2011-05-07	Juergen Beisert <jbe@pengutronix.de>

	* Platform: Release May 2011 (2011.05.0)

2011-05-06	Juergen Beisert <jbe@pengutronix.de>

	* Prepare the platform for the PTXdist 2011.05.0 release
	* Barebox: Use the current 2011.05.0 release

2011-05-04	Juergen Beisert <jbe@pengutronix.de>

	* Fix acces to the 7th ADC channel

2011-05-04	Juergen Beisert <jbe@pengutronix.de>

	* Add hwmon feature for ADC access

2011-05-02	Juergen Beisert <jbe@pengutronix.de>

	* Keep kernel in sync with stable: 2.6.35.5

2011-05-01	Juergen Beisert <jbe@pengutronix.de>

	* Default audio settings fixed

2011-04-28	Juergen Beisert <jbe@pengutronix.de>

	* Platform: Initial revision of the mini2440 platform