@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/arm 2011.05.0-mini2440-master Barebox Configuration
+# Linux/arm 2011.05.0-mini2440-ptx-2011.06.0 Barebox Configuration
 #
 # CONFIG_BOARD_LINKER_SCRIPT is not set
 CONFIG_GENERIC_LINKER_SCRIPT=y
@@ -69,7 +69,7 @@ CONFIG_GENERIC_GPIO=y
 #
 # General Settings              
 #
-CONFIG_LOCALVERSION_AUTO=y
+# CONFIG_LOCALVERSION_AUTO is not set
 
 #
 # memory layout                 
