@@ -11,7 +11,7 @@ Index: linux-2.6.39/Makefile
  PATCHLEVEL = 6
  SUBLEVEL = 39
 -EXTRAVERSION = .1
-+EXTRAVERSION = .1-ptx-master
++EXTRAVERSION = .1-ptx-2011.06.0
  NAME = Flesh-Eating Bats with Fangs
  
  # *DOCUMENTATION*
